--- a/client/src/Css/styles.css
+++ b/client/src/Css/styles.css
@@ -17,3 +17,14 @@
     background: white;
     color: black;
 }
+.updatestatus
+{
+    display: block
+}
+span.badge.edit {
+    font-weight: 300;
+    font-size: 0.8rem;
+    color: rgb(255, 255, 255);
+    background-color: rgb(38, 166, 154);
+    border-radius: 2px;
+}
